Fixed mobile responsive button trio positioning and spacing.

--- a/assets/bem-entities/button/__button-outer/button-outer.css
+++ b/assets/bem-entities/button/__button-outer/button-outer.css
@@ -1,7 +1,5 @@
 .button__button-outer {
-  margin-bottom: 1em;
   position: relative;
-  /*transition: 300ms ease-in-out;*/
 }
 
 .button__button-outer:hover {
