--- a/assets/bem-entities/widescreen-project/__button-trio/_btn-1/widescreen-project__button-trio_btn-1.css
+++ b/assets/bem-entities/widescreen-project/__button-trio/_btn-1/widescreen-project__button-trio_btn-1.css
@@ -1,10 +1,10 @@
 .widescreen-project__button-trio_btn-1 {
+  box-sizing: border-box;
   -ms-flex: 0 0 100%;
   flex: 0 0 100%;
+  margin-bottom: 15px;
   max-width: 100%;
   min-height: 1px;
-  /*padding-right: 15px;
-  padding-left: 15px;*/
   position: relative;
   width: 100%;
 }
@@ -12,9 +12,9 @@
 @media (min-width: 576px) {
 
   .widescreen-project__button-trio_btn-1 {
-    -ms-flex: 0 0 48%;
-    flex: 0 0 48%;
-    max-width: 48%;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
     padding-right: 7.5px;
   }
 
